--- a/src/main/resources/edu/farmingdale/taskmanager/profile-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/profile-view.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="ProfileController"
+            fx:controller="edu.farmingdale.taskmanager.ProfileController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
