--- a/src/main/resources/edu/farmingdale/taskmanager/styles/style.css
+++ b/src/main/resources/edu/farmingdale/taskmanager/styles/style.css
@@ -36,6 +36,16 @@
     -fx-text-fill: #472C01;
 
 }
+.page-title{
+    -fx-font-family: 'Inknut Antiqua Regular';
+    -fx-font-size: 48px;
+    -fx-text-fill: #472C01;
+}
+.party-title{
+    -fx-font-family: 'Inknut Antiqua Regular';
+    -fx-font-size: 40px;
+    -fx-text-fill: #472C01;
+}
 
 .username{
     -fx-font-family: 'Inknut Antiqua Regular';
@@ -50,4 +60,15 @@
 }
 .button-label.active{
     -fx-text-fill: #E5B515;
+}
+
+.search-field{
+    -fx-background-color: #8F590245;
+    -fx-background-image:url('../images/search.png');
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: 10px center;
+    -fx-text-fill: #472C01;
+    -fx-prompt-text-fill: #472C0150;
+    -fx-font-family: 'Inknut Antiqua Regular';
+    -fx-font-size: 20px;
 }
