--- a/src/main/resources/edu/farmingdale/taskmanager/quest-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/quest-view.fxml
@@ -364,7 +364,7 @@
                                                 </VBox>
                                             </children>
                                         </VBox>
-                                        <Rectangle fx:id="mainContainer" arcHeight="20.0" arcWidth="20.0" fill="#1f93ff00" height="846.0" mouseTransparent="true" stroke="#281902" strokeType="INSIDE" strokeWidth="5.0" width="446.0" />
+                                        <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#1f93ff00" height="846.0" mouseTransparent="true" stroke="#281902" strokeType="INSIDE" strokeWidth="5.0" width="446.0" />
                                     </children>
                                     <VBox.margin>
                                         <Insets />
