--- a/src/main/resources/edu/farmingdale/taskmanager/styles/style.css
+++ b/src/main/resources/edu/farmingdale/taskmanager/styles/style.css
@@ -78,6 +78,17 @@
     -fx-font-size: 24px;
     -fx-text-fill: #FFF;
 }
+
+.chore-card-name{
+    -fx-font-family: 'Inknut Antiqua Regular';
+    -fx-font-size: 20px;
+    -fx-text-fill: #472C01;
+}
+.chore-card-xp{
+    -fx-font-family: 'Inknut Antiqua Regular';
+    -fx-font-size: 16px;
+    -fx-text-fill: #472C01;
+}
 .button-label.active{
     -fx-text-fill: #E5B515;
 }
