--- a/src/main/resources/edu/farmingdale/taskmanager/profile-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/profile-view.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -177,6 +178,11 @@
                                     <Insets top="10.0" />
                                  </VBox.margin>
                               </StackPane>
+                              <ScrollPane hbarPolicy="NEVER" maxHeight="238.0" maxWidth="589.0" prefHeight="238.0" prefWidth="589.0">
+                                 <content>
+                                    <VBox fx:id="partyCardContainer" maxWidth="587.0" prefHeight="300.0" prefWidth="586.0" spacing="10.0" />
+                                 </content>
+                              </ScrollPane>
                            </children>
                         </VBox>
                         <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#1f93ff00" height="338.0" mouseTransparent="true" stroke="#281902" strokeType="INSIDE" strokeWidth="5.0" width="599.0" />
