--- a/src/main/resources/edu/farmingdale/taskmanager/styles/style.css
+++ b/src/main/resources/edu/farmingdale/taskmanager/styles/style.css
@@ -107,6 +107,12 @@
     -fx-font-size: 16px;
     -fx-text-fill: #472C01;
 }
+
+.small-friend-card-name{
+    -fx-font-family: 'Inknut Antiqua Regular';
+    -fx-font-size: 16px;
+    -fx-text-fill: #F8E5B2;
+}
 .button-label.active{
     -fx-text-fill: #E5B515;
 }
@@ -210,5 +216,6 @@
     -fx-background-color: transparent;
     -fx-opacity: 0;
 }
+
 
 
