--- a/src/main/resources/edu/farmingdale/taskmanager/profile-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/profile-view.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
@@ -230,6 +231,11 @@
                                     <Insets top="10.0" />
                                  </VBox.margin>
                               </StackPane>
+                              <ScrollPane hbarPolicy="NEVER" maxHeight="238.0" maxWidth="589.0" prefHeight="238.0" prefWidth="589.0">
+                                 <content>
+                                    <FlowPane fx:id="friendCardContainer" hgap="10.0" maxWidth="586.0" prefHeight="230.0" prefWidth="586.0" prefWrapLength="586.0" vgap="10.0" />
+                                 </content>
+                              </ScrollPane>
                            </children>
                         </VBox>
                         <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#1f93ff00" height="338.0" mouseTransparent="true" stroke="#281902" strokeType="INSIDE" strokeWidth="5.0" width="599.0" />
