--- a/src/main/resources/edu/farmingdale/taskmanager/quest-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/quest-view.fxml
@@ -218,7 +218,7 @@
                                                                         </LinearGradient>
                                                                     </fill>
                                                                 </Rectangle>
-                                                                <Label prefHeight="40.0" prefWidth="436.0" styleClass="bossRecord-categories" text="Tracked Quests" textAlignment="CENTER">
+                                                                <Label prefHeight="40.0" prefWidth="436.0" styleClass="boss-categories" text="Tracked Quests" textAlignment="CENTER">
                                                                     <padding>
                                                                         <Insets bottom="-8.0" left="10.0" top="-11.0" />
                                                                     </padding>
@@ -259,7 +259,7 @@
                                                                         </LinearGradient>
                                                                     </fill>
                                                                 </Rectangle>
-                                                                <Label prefHeight="40.0" prefWidth="436.0" styleClass="bossRecord-categories" text="Main Quests" textAlignment="CENTER">
+                                                                <Label prefHeight="40.0" prefWidth="436.0" styleClass="boss-categories" text="Main Quests" textAlignment="CENTER">
                                                                     <padding>
                                                                         <Insets bottom="-8.0" left="10.0" top="-11.0" />
                                                                     </padding>
@@ -300,7 +300,7 @@
                                                       </LinearGradient>
                                                    </fill>
                                                 </Rectangle>
-                                                <Label prefHeight="40.0" prefWidth="436.0" styleClass="bossRecord-categories" text="Side Quests" textAlignment="CENTER">
+                                                <Label prefHeight="40.0" prefWidth="436.0" styleClass="boss-categories" text="Side Quests" textAlignment="CENTER">
                                                    <padding>
                                                       <Insets bottom="-8.0" left="10.0" top="-11.0" />
                                                    </padding>
@@ -341,7 +341,7 @@
                                                                         </LinearGradient>
                                                                     </fill>
                                                                 </Rectangle>
-                                                                <Label prefHeight="40.0" prefWidth="436.0" styleClass="bossRecord-categories" text="Custom Quest" textAlignment="CENTER">
+                                                                <Label prefHeight="40.0" prefWidth="436.0" styleClass="boss-categories" text="Custom Quest" textAlignment="CENTER">
                                                                     <padding>
                                                                         <Insets bottom="-8.0" left="10.0" top="-11.0" />
                                                                     </padding>
@@ -381,7 +381,7 @@
                                     <children>
                                         <VBox alignment="TOP_CENTER" maxHeight="836.0" maxWidth="882.0" prefHeight="836.0" prefWidth="882.0" styleClass="container">
                                             <children>
-                                                <Label fx:id="bossName" alignment="CENTER" prefHeight="41.0" prefWidth="882.0" styleClass="bossRecord-name" text="Quest Name" textAlignment="CENTER">
+                                                <Label fx:id="bossName" alignment="CENTER" prefHeight="41.0" prefWidth="882.0" styleClass="boss-name" text="Quest Name" textAlignment="CENTER">
                                                     <padding>
                                                         <Insets bottom="-15.0" left="5.0" top="-15.0" />
                                                     </padding>
