--- a/src/main/resources/edu/farmingdale/taskmanager/party-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/party-view.fxml
@@ -85,7 +85,10 @@
                                               </StackPane>
                                     <ScrollPane hbarPolicy="NEVER" prefHeight="523.0" prefWidth="436.0">
                                        <content>
-                                          <VBox fx:id="partyContainer" prefHeight="200.0" prefWidth="100.0" />
+                                          <VBox fx:id="partyContainer" prefHeight="200.0" prefWidth="100.0">
+                                             <padding>
+                                                <Insets left="10.0" />
+                                             </padding></VBox>
                                        </content>
                                     </ScrollPane>
                                           </children>
