--- a/src/main/resources/edu/farmingdale/taskmanager/settings-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/settings-view.fxml
@@ -1,14 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="edu.farmingdale.taskmanager.Controllers.SettingsController"
-            prefHeight="400.0" prefWidth="600.0">
 
-</AnchorPane>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.image.ImageView?> <StackPane alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1024.0" prefWidth="1440.0" styleClass="bg" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.farmingdale.taskmanager.Controllers.SettingsController">
+    <children>
+        <fx:include source="navbar-view.fxml" />
+
+        <VBox>
+            <StackPane.margin>
+                <Insets left="97.0" />
+            </StackPane.margin>
+            <children>
+
+                <StackPane>
+                    <VBox.margin>
+                        <Insets top="5.0" />
+                    </VBox.margin>
+                    <children>
+                        <HBox alignment="CENTER" maxHeight="63.0" maxWidth="1328.0" prefHeight="63.0" prefWidth="1328.0" styleClass="container">
+                            <children>
+                                <Label maxHeight="63.0" styleClass="page-title" text="Settings">
+                                    <padding>
+                                        <Insets bottom="-31.5" top="-31.5" />
+                                    </padding>
+                                </Label>
+                            </children>
+                        </HBox>
+                        <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#1f93ff00" height="73.0" mouseTransparent="true" stroke="#281902" strokeType="INSIDE" strokeWidth="5.0" width="1338.0" />
+                    </children>
+                </StackPane>
+
+                <VBox alignment="CENTER" maxWidth="1338.0" prefHeight="941.0" prefWidth="1338.0">
+                    <children>
+                        <StackPane>
+                            <children>
+                                <VBox maxHeight="931.0" prefHeight="931.0" styleClass="container">
+                                    <children>
+
+                                        <GridPane alignment="TOP_CENTER" hgap="50.0" vgap="40.0">
+                                            <VBox.margin>
+                                                <Insets top="80.0" bottom="80.0" />
+                                            </VBox.margin>
+
+                                            <Button fx:id="profileButton" onAction="#handleProfileClick" styleClass="settings-tab-button" text="Profile" GridPane.rowIndex="0" GridPane.columnIndex="0" />
+                                            <Button fx:id="gameSettingsButton" onAction="#handleGameSettingsClick" styleClass="settings-tab-button" text="Game Settings" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+                                            <Button fx:id="soundSettingsButton" onAction="#handleSoundSettingsClick" styleClass="settings-tab-button" text="Sound Settings" GridPane.rowIndex="0" GridPane.columnIndex="2" />
+
+                                            <Button fx:id="accountSecurityButton" onAction="#handleAccountSecurityClick" styleClass="settings-tab-button" text="Account Security" GridPane.rowIndex="1" GridPane.columnIndex="0" />
+                                            <Button fx:id="parentalControlsButton" onAction="#handleParentalControlsClick" styleClass="settings-tab-button" text="Parental Controls" GridPane.rowIndex="1" GridPane.columnIndex="1" />
+                                            <Button fx:id="deactivateAccountButton" onAction="#handleDeactivateAccountClick" styleClass="settings-tab-button-red" text="Deactivate Account" GridPane.rowIndex="1" GridPane.columnIndex="2" />
+
+                                            <Button fx:id="logoutButton" onAction="#handleLogoutClick" styleClass="settings-tab-button" text="Logout" GridPane.rowIndex="2" GridPane.columnIndex="1" />
+
+                                        </GridPane>
+
+                                        <StackPane fx:id="contentPane" VBox.vgrow="ALWAYS">
+                                        </StackPane>
+
+                                    </children>
+                                </VBox>
+
+                                <Rectangle arcHeight="20.0" arcWidth="20.0" fill="#1f93ff00" height="941.0" mouseTransparent="true" stroke="#281902" strokeType="INSIDE" strokeWidth="5.0" width="1338.0" />
+                            </children>
+                        </StackPane>
+                    </children>
+                    <VBox.margin>
+                        <Insets top="5.0" />
+                    </VBox.margin>
+                </VBox>
+            </children>
+        </VBox>
+    </children>
+</StackPane>
