--- a/src/main/resources/edu/farmingdale/taskmanager/profile-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/profile-view.fxml
@@ -79,7 +79,7 @@
                                                 </LinearGradient>
                                              </fill>
                                           </Rectangle>
-                                          <Label fx:id="username" prefHeight="35.0" prefWidth="303.0" styleClass="username" text="HazelTheNut">
+                                          <Label fx:id="username" prefHeight="35.0" prefWidth="303.0" styleClass="username" text="Username">
                                              <padding>
                                                 <Insets left="5.0" top="-8.0" />
                                              </padding></Label>
