updated design for settings

--- a/src/main/resources/edu/farmingdale/taskmanager/profilesetting-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/profilesetting-view.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-        <?import javafx.geometry.Insets?>
-        <?import javafx.scene.control.Label?>
-        <?import javafx.scene.control.TextField?>
-        <?import javafx.scene.layout.VBox?>
-        <?import javafx.scene.shape.Circle?>
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<Vbox>
+<AnchorPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="edu.farmingdale.taskmanager.Controllers.SoundSettingsController"
+            stylesheets="styles/style.css"
+            prefHeight="400.0" prefWidth="600.0">
 
-</Vbox>
+</AnchorPane>
