--- a/src/main/resources/edu/farmingdale/taskmanager/sound-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/sound-view.fxml
@@ -9,6 +9,7 @@
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="edu.farmingdale.taskmanager.Controllers.SoundSettingsController"
+            stylesheets="styles/style.css"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
