--- a/src/main/resources/edu/farmingdale/taskmanager/settings-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/settings-view.fxml
@@ -4,20 +4,20 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="600" prefWidth="900" stylesheets="@styles/style.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17.0.12" fx:controller="edu.farmingdale.taskmanager.Controllers.SettingsController">
+<BorderPane prefHeight="600" prefWidth="900" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.farmingdale.taskmanager.Controllers.SettingsController">
 
     <left>
-        <VBox alignment="TOP_CENTER" prefWidth="220" spacing="40" styleClass="container">
+        <VBox alignment="TOP_CENTER" prefWidth="220" spacing="30" styleClass="container">
             <padding><Insets bottom="10" left="10" right="10" top="25" /></padding>
 
-            <Label style="-fx-font-weight: bold; -fx-font-size: 14;" text="⚔️ Back to Main Page" />
-            <Button fx:id="profileBtn" onAction="#openProfile" text="Profile" />
-            <Button fx:id="gameBtn" onAction="#openGameSettings" text="Game Settings" />
-            <Button fx:id="soundBtn" onAction="#openSoundSettings" text="Sound Settings" />
-            <Button fx:id="securityBtn" onAction="#openSecurity" text="Account Security" />
-            <Button fx:id="deactivateBtn" onAction="#openDeactivate" text="Deactivate Account" />
-            <Button fx:id="parentalBtn" onAction="#openParental" text="Parental Controls" />
-            <Button fx:id="logoutBtn" onAction="#logout" text="Logout" />
+            <Label style="-fx-font-weight: bold; -fx-font-size: 14;" styleClass="menu-label" text="⚔️ Back to Main Page" textFill="#6b350e" />
+            <Button fx:id="profileBtn" onAction="#openProfile" text="Profile" textFill="#72490b" />
+            <Button fx:id="gameBtn" onAction="#openGameSettings" text="Game Settings" textFill="#72490b" />
+            <Button fx:id="soundBtn" onAction="#openSoundSettings" text="Sound Settings" textFill="#72490b" />
+            <Button fx:id="securityBtn" onAction="#openSecurity" text="Account Security" textFill="#72490b" />
+            <Button fx:id="deactivateBtn" onAction="#openDeactivate" text="Deactivate Account" textFill="#72490b" />
+            <Button fx:id="parentalBtn" onAction="#openParental" text="Parental Controls" textFill="#72490b" />
+            <Button fx:id="logoutBtn" onAction="#logout" text="Logout" textFill="#72490b" />
         </VBox>
     </left>
 
