--- a/src/main/resources/edu/farmingdale/taskmanager/game-view.fxml
+++ b/src/main/resources/edu/farmingdale/taskmanager/game-view.fxml
@@ -1,2 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+
+<AnchorPane prefHeight="600" prefWidth="900" stylesheets="@styles/style.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.farmingdale.taskmanager.Controllers.GameSettingController">
+
+
+<Label text="Game Settings" layoutX="230" layoutY="18" styleClass="menu-label"/>
+
+
+    <VBox spacing="15" layoutX="160" layoutY="70">
+        <CheckBox fx:id="tutorialsCheck" text="Show Tutorials"/>
+        <CheckBox fx:id="animationsCheck" text="Enable Animations"/>
+        <CheckBox fx:id="notificationsCheck" text="Enable Notifications"/>
+        <CheckBox fx:id="gameModeCheck" text="Enable Game Mode"/>
+    </VBox>
+
+
+    <Button text="Save Changes" layoutX="235" layoutY="270" onAction="#openGameSetting"/>
+
+
+    <Label fx:id="statusLabel" layoutX="250" layoutY="320" style="-fx-text-fill: lightgreen;"/>
+
+</AnchorPane>
+
